style.css
/* ... */
.section6 .main{
    display: flex;
    flex-direction: column;
    gap: 5rem;
}
.section6 .text1 {
    font-size: 50px;
    font-family: cursive;
    overflow: visible;
   
}
.section6 .firstText p{
    justify-content: center;
    font-size: 50px;
    font-family: cursive;
    
}
.section6 .part1{
    margin-right: 30rem;
    overflow: visible;
}
.section6 .texts{
    overflow: visible;
}

.section6 .part1 img{
width: 10rem;
height: 10rem;
border-radius: 50%;

}
.section6 .part2{
    margin-left: 30rem;
}
.section6 .part2 .images{
    display: flex;
    gap: 3rem;
}
.section6 .part2 img{
    border-radius: 50%;
    width: 10rem;
    height: 5rem;

}
.section6 .part3{
    margin-right: 30rem;
    overflow: visible;
}
.section6 .part3 .images{
    display: flex;
    gap: 3rem;
    overflow: visible;
}
.section6 .part3 img{
    border-radius: 50%;
    width: 10rem;
    height: 10rem;
    overflow: visible;
    
}
.section6 .part1 .images{
    display: flex;
    gap: 3rem;
    overflow: visible;
}
.section6 .text2{
    font-size: 20px;
}
.section6 .part4{
    margin-left: 30rem;
}
.section6 .part4 img{
    border-radius: 20px;
    width: 10rem;
    height: 10rem;
}
.section7{
    padding: 10rem;
}
.section7 .main1{
    padding: 0;
    overflow: visible;
}
.section7 .text1{
    font-size: 30px;
    font-weight: bold;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}
.section7 div{
    width: 25rem;
}
.section7 div button img{
    width: 60px;
    height: 20px;

}
.section7 div button{
   
    background-color: rgb(57, 121, 180);
    border-radius: 30px;
    align-items: center;

}
.section7 div .button{
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all ease-in-out 0.3s;
    overflow-x: visible;
}
.section7 div .button:hover{
    transform: scale(1.2);
}
.section7 .main2{
    display: flex;
    gap: 2.5rem;
    overflow: visible;
}
.section7 .main3{
    display: flex;
    gap: 2.5rem;
    overflow: visible;
}
.section7 p{
    font-size: 20px;
}
@media (max-width: 1000px) {
    .section4 .texts {
        padding-top: 5rem;
    }
    .section3 .image {
        margin: 100px;
    }
    .main1{
        padding:2rem;
    }
    .section4 .text1{
        font-size: 20rem;
    }
    .section4 .texts p{
        font-size: 1.5rem;
    }
    .section4 .main2 p{
        font-size: 20px;
        padding: 10px;
    }
    .section4 .main2{
        gap: 1.5rem;
    }
    .section4 .texts{
        width: 20rem;
    }
    .section5 .part{
        gap: 10rem;
    }
    .section5 .texts{
        width: 20rem;
        overflow: visible;
    }
    .section6 .part1 img{
        width: 5rem;
        height: 5rem;
        overflow: visible;
    }
    .section6 .text1 {
        font-size: 35px;
    }
    .section6 .text2{
        width: 24rem;
    }
    .section6 .part2{
        margin-left: 15rem;
    }
    .section6 .part4{
        margin-left: 15rem;
    }
    .section6 .main {
        padding: 2rem;
    }
}
@media (max-width: 800px) {
    #sidebar{
        display: none;
    }
.menu-container {
    position: relative;
    display: block;
  }
  .menu-btn {
    background-color: rgb(246, 240, 240);
    color: black;
    border: none;
    padding: 15px;
    font-size: 28px;
    cursor: pointer;
    display: block;
    position: fixed;
    top: 10px;
    right: 10%;
   border-radius: 20px;
   transition: all ease-in-out 0.3s;
  }
  .menu-btn:hover{
    transform: scale(1.2);
  }
  #sidebar2 {
    height: 100%;
    
    position: fixed;
    top: 0;
    right: -250px; 
    background-color: #333;
    
    transition: all ease-in-out 0.3s; 
    z-index: 1001; 
    display: flex;
    flex-direction: column;
    padding: 4rem 2rem;
    position: -webkit-sticky;


  }
  #sidebar2 p a{
    font-size: 20px;
    color: white;
    text-decoration: none;
  }
  .close-btn {
    background: none;
    border: none;
    color: white;
    font-size: 36px;
    cursor: pointer;
    position: absolute;
    top: 10px;
    right: 20px;
  }
  .section1 header{
    width: 100vw;
    border-radius: 10px;
    transition: all ease-in-out 0.3s;
    position: fixed;
    top: 0;
  }
  
  .section6 .text2 {
    width: 28rem;
  }
  .section5 .line  {
    width: 80vw;
  }
  .section6 .text1 {
    width: 20rem;
  }
  .main {
    flex-direction: column;
    width: 100%;
  }
  .section2 .line2{
  display: none;
  }
  .main .text {
    padding-top: 3rem;
    
    font-size: 14px;
    width: 35rem;
    padding-left: 0;
    padding-right: 0;
  }
  .main .image{
    width: 200px;
    height: 200px;
  }
  .main .mainText{
    font-size: 20px;
    top: 60%;
    margin-left: 0px;
    width: 20rem;
}
  
  .section2 .text2{
    font-size: 20px;
  }
  .section2 .text4{
    font-size: 20px;
  }
  .section2 .text3 {
    font-size: 15px;

  }
  .section2 .text5{
    font-size: 15px;
  }
  .section2 ul li {
    font-size: 13px;
  }
  .section2 .main{
    padding: 0;
    margin: 0;
    gap: 4rem;
  }
  .section2{
   margin-top: 10rem;
    height: fit-content;
  }
  .section3 .image {
    display: block;
    max-height: fit-content;
    width: auto;
}
.section3 .text3 {
    font-size: 15px;
    text-align: justify;
}
.section3 .part2{
    margin-top: 70rem;
    flex-direction: column;
    padding: 3rem;

}
.section3 .part2 img{
    width: 20rem;
    height: 20rem;
}
.section4 .text1{
    font-size: 20rem;
}
.section4 .texts p {
    font-size: 15px;
}
.main1 {
    gap: 0;
}
.section6 .text2 {
    width: 25rem;
    font-size: 20px;
    text-align: justify;
}
.section6 .part2 {
    margin-left: 0;
    overflow: visible;
}
.section6 .part4 {
    margin-left: 0;
    overflow: visible;
}
.section5 .line{
    width: 60vw;
}
}
/* ... */

